--- a/AvaloniaUIHelp/AvaloniaUIHelp/App.axaml
+++ b/AvaloniaUIHelp/AvaloniaUIHelp/App.axaml
@@ -7,6 +7,8 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme Mode="Light"/>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
+        <!--<FluentTheme Mode="Light"/>-->
     </Application.Styles>
 </Application>
