--- a/AvaloniaUIHelp/AvaloniaUIHelp/Views/AppChoooser.axaml
+++ b/AvaloniaUIHelp/AvaloniaUIHelp/Views/AppChoooser.axaml
@@ -4,10 +4,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AvaloniaUIHelp.Views.AppChoooser"
-        Title="AppChoooser"  SizeToContent="WidthAndHeight">
+        Title="AppChoooser"  SizeToContent="WidthAndHeight" >
   <Window.Resources>
     <FontFamily x:Key="iconFont">/Assets/#iconfont</FontFamily>
+     
       <StreamGeometry x:Key="crosshairGeometry">M19,16 C20.656855,16 22,17.343145 22,19 22,20.656855 20.656855,22 19,22 17.343145,22 16,20.656855 16,19 16,17.343145 17.343145,16 19,16 z M17.416698,6.4314003 C11.687,7.1457996 7.1457996,11.687 6.4312992,17.416698 L9.5,17.416698 9.5,20.583302 6.4312992,20.583302 C7.1457996,26.313 11.687,30.854198 17.416698,31.568699 L17.416698,28.5 20.583302,28.5 20.583302,31.568699 C26.313,30.854198 30.854198,26.313 31.5686,20.583302 L28.5,20.583302 28.5,17.416698 31.5686,17.416698 C30.854198,11.687 26.313,7.1457996 20.583302,6.4314003 L20.583302,9.5 17.416698,9.5 z M17.416698,0 L20.583302,0 20.583302,3.2448008 C28.063702,3.9874992 34.012501,9.9363003 34.755199,17.416698 L38,17.416698 38,20.583302 34.755199,20.583302 C34.012501,28.063702 28.063702,34.012501 20.583302,34.755199 L20.583302,38 17.416698,38 17.416698,34.755199 C9.9363003,34.012501 3.9874992,28.063702 3.2448008,20.583302 L0,20.583302 0,17.416698 3.2448008,17.416698 C3.9874992,9.9363003 9.9363003,3.9874992 17.416698,3.2448008 z</StreamGeometry>
+      <LinearGradientBrush x:Key="blueSteelGradientBrush" EndPoint="0.501,-0.007" StartPoint="0.501,1.007">
+          <GradientStop Color="#FF0B9FF2" Offset="0.787"/>
+          <GradientStop Color="#FF007674" Offset="0"/>
+          <GradientStop Color="#FF004468" Offset="0.257"/>
+          <GradientStop Color="#FF004970" Offset="0.251"/>
+          <GradientStop Color="#FF014F79" Offset="0.421"/>
+          <GradientStop Color="#FF036194" Offset="1"/>
+      </LinearGradientBrush>
   </Window.Resources>
   <Window.Styles>
     <Style Selector="Window">
@@ -32,21 +41,39 @@
 
 
   </Window.Styles>
-  <Border BorderBrush="Black" Background="blue" PointerPressed="TitleMove">
-      <!--头部内容-->
-      <StackPanel Orientation="Horizontal" Spacing="5">
-          <TextBlock Text="SnooB" FontSize="25" Foreground="#a0d0ea" VerticalAlignment="Center"/>
-          <Button Name="btnStartWindowsSearch" VerticalAlignment="Center" Cursor="DragMove">
-              <Path x:Name="snoopCrosshairsImage"
-                    Width="16"
-                    Height="16"
-                    Stretch="Fill"
-                    Fill="Black"
-                    Data="{DynamicResource crosshairGeometry}" />
-          </Button>
-          <TextBlock  Text="&#xe62d;"  Classes="IconFontText" PointerPressed="InputMin_OnPointerPressed"/>
-          <TextBlock  Text="&#xe8df;" ToolTip.Tip="Exit" Classes="IconFontText" PointerPressed="InputElement_OnPointerPressed"/>
-      </StackPanel>
-      <!--隐藏内容-->
-  </Border>
-</Window>
+    <Grid>
+        <Border
+            Margin="1,1,0,0"
+            Background="#66000000"
+            CornerRadius="3,3,3,3"
+        />
+
+        <!-- blue steel background -->
+        <Border
+            Margin="0,0,1,1"
+            Background="{StaticResource blueSteelGradientBrush}"
+            BorderBrush="#66FFFFFF"
+            BorderThickness="1,1,1,1"
+            CornerRadius="2,2,2,2"
+        />
+
+            <!--头部内容-->
+            <StackPanel Orientation="Horizontal" Spacing="5" Margin="5 2">
+                <Border VerticalAlignment="Stretch" PointerPressed="TitleMove">
+                    <TextBlock Text="Snoob" FontSize="25" Foreground="#a0d0ea" VerticalAlignment="Center"/>
+                </Border>
+                <Border Name="btnStartWindowsSearch" Padding="5" VerticalAlignment="Center" Background="White">
+                    <Path x:Name="snoopCrosshairsImage"
+                          Width="16"
+                          Height="16"
+                          Stretch="Fill"
+                          Fill="Black"
+                          Data="{DynamicResource crosshairGeometry}" />
+                </Border>
+                <TextBlock  Text="&#xe62d;"  Classes="IconFontText" PointerPressed="InputMin_OnPointerPressed"/>
+                <TextBlock  Text="&#xe8df;" ToolTip.Tip="Exit" Classes="IconFontText" PointerPressed="InputElement_OnPointerPressed"/>
+            </StackPanel>
+            <!--隐藏内容-->
+    </Grid>
+
+  </Window>
