真正意义上实现转换屏幕位置到Avalonia位置，下一步就是测试Bug和线程注入了

--- a/AvaloniaUIHelp/AvaloniaUIHelp/Views/AppChoooser.axaml
+++ b/AvaloniaUIHelp/AvaloniaUIHelp/Views/AppChoooser.axaml
@@ -21,7 +21,7 @@
   <Window.Styles>
     <Style Selector="Window">
       <Setter Property="WindowState" Value="Normal"/>
-      <!--<Setter Property="SystemDecorations" Value="BorderOnly"/>-->
+      <Setter Property="SystemDecorations" Value="BorderOnly"/>
       <Setter Property="WindowStartupLocation"  Value="Manual"/>
       <Setter Property="Topmost" Value="True"/>
     </Style>
